--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <!-- Your existing project info -->
   <groupId>synonym.network.explorer</groupId>
-  <artifactId>synonym-network-explorer</artifactId>
+  <artifactId>synonym-network-api</artifactId>
   <version>1.0-SNAPSHOT</version>
   <properties>
     <java.version>17</java.version>
@@ -55,16 +55,6 @@
       <groupId>edu.princeton.cs</groupId>
       <artifactId>algs4</artifactId>
       <version>1.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.graphstream</groupId>
-      <artifactId>gs-core</artifactId>
-      <version>2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.graphstream</groupId>
-      <artifactId>gs-ui-swing</artifactId>
-      <version>2.0</version>
     </dependency>
   </dependencies>
   <build>
