--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,6 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <repositories>
-    <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
-    </repository>
-  </repositories>
   <dependencies>
     <!-- Spring Boot dependencies -->
     <dependency>
@@ -54,7 +48,9 @@
     <dependency>
       <groupId>com.github.kevin-wayne</groupId>
       <artifactId>algs4</artifactId>
-      <version>master-SNAPSHOT</version>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/algs4.jar</systemPath>
     </dependency>
   </dependencies>
   <build>
